Create switchable scenes with StageHandler

--- a/TODO.txt
+++ b/TODO.txt
@@ -28,6 +28,12 @@ Load more chunks at once?
 Rotate camera when in planet's atmosphere to face downwards
 
 
+
+Switch screens
+    Replace with something idk
+    Only one renderer, change stage.visible 
+
+
 Relativity so ships cannot exceed lightspeed
 
 
