Make sectors a lot smaller

--- a/TODO.txt
+++ b/TODO.txt
@@ -42,6 +42,9 @@ set the body to sleep
 set the body collisionFilter so it is not colliding with anything
 stop rendering the body
 
+Easter eggs?
+http://www.scp-wiki.net/scp-1437
+
 
 
 
